deployment-slimfaas.yml
apiVersion: v1
kind: Namespace
metadata:
  name: slimfaas-demo
  labels:
    name: slimfaas
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: slimfaas
  namespace: slimfaas-demo
spec:
  replicas: 1
  podManagementPolicy: Parallel
  serviceName: slimfaas
  selector:
    matchLabels:
      app: slimfaas
  template:
    metadata:
      labels:
        app: slimfaas
    spec:
      volumes:
        - name: slimfaas-volume
          emptyDir:
            sizeLimit: 10Mi
      serviceAccountName: slimfaas
      containers:
        - name: slimfaas
          image: axaguildev/slimfaas:latest
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 8
            terminationGracePeriodSeconds: 30
          volumeMounts:
            - name: slimfaas-volume
              mountPath: /database
          resources:
            limits:
              memory: "60Mi"
              cpu: "400m"
            requests:
              memory: "60Mi"
              cpu: "200m"
          ports:
            - containerPort: 5000
              name: slimfaas
            - containerPort: 3262
              name: slimdata
---
apiVersion: v1
kind: Service
metadata:
  name: slimfaas
  namespace: slimfaas-demo
spec:
  selector:
    app: slimfaas
  ports:
    - name: "http"
      port: 5000
    - name: "slimdata"
      port: 3262
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slimfaas
  namespace: slimfaas-demo
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    # for the NGINX's nginx-ingress 
    nginx.org/proxy-connect-timeout: 1200s
    nginx.org/proxy-read-timeout: 1200s
    nginx.org/proxy-send-timeout: 1200s
    # for the default ingress-nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1200"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1200"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1200"
spec:
  tls:
  - hosts:
    - <dns-entry>
    secretName: slimfaas-tls
  rules:
  - host: <dns-entry>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: slimfaas
            port:
              number: 5000
